# bevy_prototype_2d_graphics

./: Cargo.toml
examples/: lines.rs  solar_system.rs
src/: circles.rs  lib.rs  lines.rs  rectangles.rs
src/shader/: circle.frag  line.frag  line.vert  rectangle.frag
