[package]
name = "bevy_prototype_2d_graphics"
version = "0.1.0"
authors = ["clul1000"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { path = "../bevy" }
bevy = "0.1.3"

[[example]]
name = "solar_system"
path = "examples/solar_system.rs"

[[example]]
name = "lines"
path = "examples/lines.rs"
